# mx-urtcdg-2

./: .gitignore  sc..txt  time.txt
.github/workflows/: pantismyl.yml
WX/: .azz  README.MD  cargoinit.sh  rizi.sh
WX/bui/: p1  pantismyl  pantismyl.1  prepz.sh
WX/te1/: README.MD
WX/te1/src/: main.rs
WX/te1/src/utilz/: mod.rs  ut1.rs
WX/te2py/cra2/: main.py  pyproject.toml
WX/w1/: Cargo.toml  README.MD
WX/w1/jstest/: sec3.js  test1.js
WX/w1/src/: main.rs
WX/w1/src/sec2/: mod.rs  s1.rs  s21.rs
WX/w1/src/sec3/: s1.rs  s31.rs
WX/w1/src/tez/: box1.rs  mod.rs
WX/w1/src/utilz/: mod.rs
WX/zama/: bunz.sh  zam.sh
WX/zama/b1/: package.json
buildz/: prepz.sh
buildz/w1/: Cargo.toml  README.MD
buildz/w1/src/: main.rs
buildz/w1/src/sec2/: s1.rs
mx/: vscodedev.txt
mx--urtcdg-1/WO/t2/src/: main.rs  test1.rs
