[package]
name = "w1"
version = "0.1.0"
edition = "2024"
authors = ["BootySmellers"]

[dependencies]
boxy-cli = "2.0.0"
cfonts = "1.2.0"
yansi = "1.0.1"

[[bin]]
name = "pantismyl"
path = "src/main.rs"

# Optimize for size
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimization
panic = "abort"   # Abort on panic to reduce binary size
strip = true      # Automatically strip symbols from the binary
